welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:31: error: not found: value faireMotif
faireMotif(Color.red)
^FlowerPot:32: error: not found: value faireMotif
faireMotif(Color.blue)
^FlowerPot:33: error: not found: value faireMotif
faireMotif(Color.green)
^FlowerPot:34: error: not found: value faireMotif
faireMotif(Color.yellow)
^